--- a/sqlserver/sql.yaml
+++ b/sqlserver/sql.yaml
@@ -1,1 +1,10 @@
-
+sqlserver:
+-name=mssqlserver
+ version=12.0
+ minimum_tls_version=1.2
+-name=mssqlserver
+ version=12.0
+ minimum_tls_version=1.2
+-name=mssqlserver
+ version=12.0
+ minimum_tls_version=1.2
