--- a/sqlserver/sql.yaml
+++ b/sqlserver/sql.yaml
@@ -1,10 +1,10 @@
 listmysqlserver:
--name=mssqlserver
+-name=mysqlserver
  version=12.0
  minimum_tls_version=1.2
--name=mssqlserver
+-name=mysqlserver2
  version=12.0
  minimum_tls_version=1.2
--name=mssqlserver
+-name=mysqlserver3
  version=12.0
  minimum_tls_version=1.2
