--- a/sqlserver/sql.yaml
+++ b/sqlserver/sql.yaml
@@ -1,4 +1,4 @@
 listofmssqlserver:
-  -name=mssqlserver
-   version=12.0
-   minimum_tls_version=1.2
+  -name: mssqlserver
+   version: 12.0
+   minimum_tls_version: 1.2
