--- a/sqlserver/sql.yaml
+++ b/sqlserver/sql.yaml
@@ -1,5 +1,8 @@
 listofmysqlserver:
   - name: mssqlserver1
+    version: 12.0
   - name: mssqlserver2
+    version: 12.0
   - name: mssqlserver3
+    version: 12.0
   
