--- a/sqlserver/sql.yaml
+++ b/sqlserver/sql.yaml
@@ -1,7 +1,10 @@
 listofmysqlserver:
   - name: mssqlserver1
+    version: 12.0
   - name: mssqlserver2
+    version: 12.0
   - name: mssqlserver3
+    version: 12.0
 
   
   
