--- a/sqlserver/sql.yaml
+++ b/sqlserver/sql.yaml
@@ -1,8 +1,8 @@
 listofmysqlserver:
   - name: mssqlserver1
-    version: 12.0
+    server_version: 12.0
   - name: mssqlserver2
-    version: 12.0
+    server_version: 12.0
   - name: mssqlserver3
     version: 12.0
 
